update kode HTML - tambah NIM + Nama

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>EI22_SHOPP</title>
+</head>
+<body>
+	<h1>EI22_SHOPP Landing page</h1>
+
+	<p>By</p>
+	<ul>
+		<li>Nama : Erni Ilmiyah</li>
+		<li>NIM : 31212147</li>
+	</ul>
+	
+</body>
+</html>
