--- a/index.html
+++ b/index.html
@@ -2,17 +2,43 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>EI22_SHOPP</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
-	<h1>EI22_SHOPP Landing page</h1>
+	<!-- header -->
+	<div class ="medsos">
+		<div class="container">
+			<ul>
+				<li><a href="#"><i class="fa-brands fa-facebook-f"></i></li>
+				<li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+				<li><a href="#"><i class="fa-brands fa-yoast"></i></li>
+			</ul>
+			
+		</div>	
+	<h1>EI22_SHOPP</h1>
 
-	<p>By</p>
-	<ul>
-		<li>Nama : Erni Ilmiyah</li>
-		<li>NIM : 31212147</li>
-	</ul>
+	<div id="menu">
+		<a href="#">Home</a>
+		<a href="modul/produk/produk_saya.html">Produk Saya</a>
+		<a href="modul/about/tentang_toko.html">Tentang Toko</a>
+		<a href="#">Informasi</a>
+		<a href="modul/about/tentang_saya.html">Tentang Saya</a>
+		<a href="#">Daftar</a>
+	</div>
+
 	
+
+	<h2>Selamat Datang di EI22_SHOPP</h2>
+
+	<p>Promo Fashion Lebaran</p>
+
+	<ul>
+		<li>Gamis</li>
+		<li>Hijab</li>
+		<li>Mukenah</li>
+	
+	</ul>
 </body>
 </html>
