--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
 	<title>EI22_SHOPP</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+	<style type="text/css">
+
+	.tabel_judul{
+		background-color: yellow;
+	}
+	img{
+		border: solid 5px white;
+		transition: 2s;
+		box-shadow: 2px 2px 3px grey;
+		
+	}
+	img.{
+		transform: scale(1.0);
+	}
+</style>
 </head>
 <body>
 	<!-- header -->
@@ -23,7 +38,7 @@
 		<a href="#">Home</a>
 		<a href="modul/produk/produk_saya.html">Produk Saya</a>
 		<a href="modul/about/tentang_toko.html">Tentang Toko</a>
-		<a href="#">Informasi</a>
+		<a href="modul/about/informasi.html">Informasi</a>
 		<a href="modul/about/tentang_saya.html">Tentang Saya</a>
 		<a href="#">Daftar</a>
 	</div>
