--- a/modul/about/tentang_toko.html
+++ b/modul/about/tentang_toko.html
@@ -11,10 +11,9 @@
 	<a href="#" onclick="history.go(-1)">Kembali</a>
 	<p> Aneka macam kebutuhan yang anda perlukan !!!</p>
 
-	<p>Selamat datang di EI22_SHOPP, Website ini dibuat denan bertujuan sebagai media sharing tentang Fashion Style di Indonesia yang menurut saya dapat membantu kalian mencari fashion style terkini.  </p>
+	<p>Selamat datang di EI22_SHOPP, Website ini dibuat dengan tujuan sebagai media sharing tentang Fashion Style di Indonesia yang menurut saya dapat membantu kalian mencari fashion style terkini.  </p>
 
-	<p>Alamat Toko:</p>
-	<p>Kontak</p>
+	<p>Alamat Toko: ILMI CELL </p>
 
 	
 
