--- a/modul/produk/produk_saya.html
+++ b/modul/produk/produk_saya.html
@@ -35,9 +35,15 @@
 	<div class="produk">
 		<div class="item">
 			Gamis Abaya Polos
+			<p align="center">
+				<img src="abaya.JPEG" width="100px">
+			</p>
 		</div>
 		<div class="item">
 			Gamis Ceruty babydoll
+			<p align="center">
+				<img src="" width="100px">
+			</p>
 		</div>
 		<div class="item">
 			Gamis Nibras Terbaru NB A75
