--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>EI22_SHOPP</title>
+
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 	<style type="text/css">
@@ -34,13 +35,15 @@
 		</div>	
 	<h1>EI22_SHOPP</h1>
 
+
+
 	<div id="menu">
-		<a href="#">Home</a>
-		<a href="modul/produk/produk_saya.html">Produk Saya</a>
-		<a href="modul/about/tentang_toko.html">Tentang Toko</a>
-		<a href="modul/about/informasi.html">Informasi</a>
-		<a href="modul/about/tentang_saya.html">Tentang Saya</a>
-		<a href="#">Daftar</a>
+		<li class="active"><a href="#">Home</a></li>
+		<li class="active"><a href="modul/produk/produk_saya.html">Produk Saya</a></li>
+		<li class="active"><a href="modul/about/tentang_toko.html">Tentang Toko</a></li>
+		<li class="active"><a href="modul/about/informasi.html">Informasi</a></li>
+		<li class="active"><a href="modul/about/tentang_saya.html">Tentang Saya</a></li>
+		<li class="active"><a href="#">Daftar</a></li>
 	</div>
 
 	
