--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
 <head>
@@ -21,9 +20,36 @@
 	img.{
 		transform: scale(1.0);
 	}
+	.Produk{
+			width: 50%;
+			grid-template-columns: 1fr 1fr 1fr;
+			margin: auto;
+			margin-bottom: 15px;
+
+	display: flex;
+	
+			}
+			.Produk.foto img{
+				width: 200px;
+				border-radius: 10px;
+			}
+			.Produk
+			{
+				border: 1px solid black;
+				margin: 10px;
+				text-align: center;
+				border-radius: 40px;
+
+			}
+			h1{
+				font-size: 20px;
+				margin: auto;
+			}
+	}
 </style>
 </head>
 <body>
+
 	<!-- header -->
 	<div class ="medsos">
 		<div class="container">
@@ -44,14 +70,14 @@
 		<li class="active"><a href="modul/about/tentang_toko.html">Tentang Toko</a></li>
 		<li class="active"><a href="modul/about/informasi.html">Informasi</a></li>
 		<li class="active"><a href="modul/about/tentang_saya.html">Tentang Saya</a></li>
-		<li class="active"><a href="#">Daftar</a></li>
+		<li class="active"><a href="modul/about/daftar.html">Daftar</a></li>
 	</div>
 
 	
 
 	<h2>Selamat Datang di EI22_SHOPP</h2>
 
-	<p>Promo Fashion Lebaran</p>
+	<p>Promo Fashion Akhir Bulan..!!!</p>
 
 	<ul>
 		<li>Gamis</li>
@@ -61,64 +87,3 @@
 	</ul>
 </body>
 </html>
-=======
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>EI22_SHOPP</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-	<style type="text/css">
-
-	.tabel_judul{
-		background-color: yellow;
-	}
-	img{
-		border: solid 5px white;
-		transition: 2s;
-		box-shadow: 2px 2px 3px grey;
-		
-	}
-	img.{
-		transform: scale(1.0);
-	}
-</style>
-</head>
-<body>
-	<!-- header -->
-	<div class ="medsos">
-		<div class="container">
-			<ul>
-				<li><a href="#"><i class="fa-brands fa-facebook-f"></i></li>
-				<li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-				<li><a href="#"><i class="fa-brands fa-yoast"></i></li>
-			</ul>
-			
-		</div>	
-	<h1>EI22_SHOPP</h1>
-
-	<div id="menu">
-		<a href="#">Home</a>
-		<a href="modul/produk/produk_saya.html">Produk Saya</a>
-		<a href="modul/about/tentang_toko.html">Tentang Toko</a>
-		<a href="modul/about/informasi.html">Informasi</a>
-		<a href="modul/about/tentang_saya.html">Tentang Saya</a>
-		<a href="#">Daftar</a>
-	</div>
-
-	
-
-	<h2>Selamat Datang di EI22_SHOPP</h2>
-
-	<p>Promo Fashion Lebaran</p>
-
-	<ul>
-		<li>Gamis</li>
-		<li>Hijab</li>
-		<li>Mukenah</li>
-	
-	</ul>
-</body>
-</html>
->>>>>>> 6804e4950cb51ddc6929f9ff8a830879b05af37b
